# update-workspace-snippets

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  Makefile  README.md  go.mod  go.sum  main.go
.githooks/: pre-commit
.github/workflows/: test.yaml
dev/: BUILD
updater/: BUILD  updater.go  updater_test.go
