# Copyright 2023, 2024, 2025 Philipp Stephani
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "phst_update_workspace_snippets")

bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# FIXME: Use go_sdk.from_file once
# https://github.com/bazel-contrib/rules_go/issues/4307 is fixed.
go_sdk.download(version = "1.23.6")
go_sdk.nogo(nogo = "//dev:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_go_git_go_git_v5",
    "com_github_google_go_cmp",
)

bazel_dep(name = "phst_license_test", version = "0", dev_dependency = True)
git_override(
    module_name = "phst_license_test",
    commit = "a13bbc79631d4a5612a5d4f59d0f8466fd1ba941",
    remote = "https://github.com/phst/license_test.git",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True, repo_name = "buildifier")
