# Copyright 2023, 2024, 2025 Philipp Stephani
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "phst_update_workspace_snippets")

bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "gazelle", version = "0.46.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//dev:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "go.mod")
use_repo(
    go_deps,
    "co_honnef_go_tools",
    "com_github_bazelbuild_buildtools",
    "com_github_go_git_go_git_v5",
    "com_github_google_go_cmp",
)

bazel_dep(name = "phst_license_test", version = "0", dev_dependency = True)
git_override(
    module_name = "phst_license_test",
    commit = "b4ee882d887790aacf97b18853afd9f964a0eb24",
    remote = "https://github.com/phst/license_test.git",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True, repo_name = "buildifier")
